<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/menu_pintor" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/esculturaicono"
            android:title="@string/menu_escultor" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/menu_cientifico" />
        <item
            android:id="@+id/nav_cientifico"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/menu_inventor" />
    </group>
</menu>