<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home"
    >


    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.practicat5.ui.home.HomeFragment"
        android:label="@string/menu_pintor"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.practicat5.ui.gallery.GalleryFragment"
        android:label="@string/menu_escultor"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.practicat5.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_cientifico"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_cientifico"
        android:name="com.example.practicat5.FragmentCientifico"
        android:label="@string/menu_inventor"
        tools:layout="@layout/fragment_cientifico" />
</navigation>